# CppAnimationFramework

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
C++AnimationFramework/: main.cpp  shapes.cpp  shapes.h  transform.cpp  transform.hpp  waves.hpp
C++AnimationFramework.xcodeproj/: project.pbxproj
C++AnimationFramework.xcodeproj/project.xcworkspace/xcuserdata/harveybates.xcuserdatad/: UserInterfaceState.xcuserstate
C++AnimationFramework.xcodeproj/xcuserdata/harveybates.xcuserdatad/xcschemes/: xcschememanagement.plist
VideoExamples/: Example.mov
include/: boids.hpp  graph.hpp  main.h  shapes.h  waves.hpp
src/: .main.cpp.swp  boids.cpp  graph.cpp  main.cpp  shapes.cpp  waves.cpp
